@@ -1,3 +1,12 @@
+2020-05-20  Anuj Verma  <anujv@iitbhilai.ac.in>
+
+	* sdfgen.c (get_min_distance): fixed a calculation mistake for
+	  calculating shortest distance from a point to quadratic bezier
+	  curve. Instead of `c = B.B + A.p0 - A.p' the correct one will
+	  be `c = 2B.B + A.p0 - A.p'. Now the function works correctly.
+	  Also, the function now along with point on the curve return the
+	  direction of the curve at that point.
+
 2020-05-19  Anuj Verma  <anujv@iitbhilai.ac.in>
 
 	[sdf-outline] added algorithm to return find distance from
